--- a/style.css
+++ b/style.css
@@ -18,3 +18,16 @@
 .clock-time {
     font-size: 100px;
 }
+
+.message {
+    text-align: center;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.msg-text {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 50px;
+    color: aliceblue;
+}
